# biology-self-improvement

./: .env.example  .gitignore  DESIGN.md  DESIGN_DEV.md  LICENSE  QUICKSTART.md  README.md  RULES.md  create_example_docs.py  demo_processor.py  pyproject.toml  requirements.txt  run_tests.py
agents/: agent_base.py  errors.py
document_processor/: __init__.py  image_describer.py  main.py  models.py  pdf_extractor.py  text_formatter.py  word_extractor.py
llm/: llm_base.py
tests/: test_pdf_processor.py
utils/: config.py
生物课本/高中生物必修1/: 1.1.1.txt  1.1.2.txt  1.2.1.txt  1.2.2 第2节细胞中的无机物.txt  1.2.3 第3节 细胞中的糖类和脂质.txt  1.2.4 第4节 蛋白质是生命活动的主要承担者.txt  1.2.5 第5节 核酸是遗传信息的携带者.txt  1.3.1 第1节细胞膜的结构和功能.txt  1.3.2 第2节细胞器之间的分工合作.txt  1.3.3 第3节细胞核的结构和功能.txt  1.4.1 第1节被动运输.txt  1.4.2 第2节主动运输与胞吞、胞吐.txt  1.5.1 第1节降低化学反应活化能的酶.txt  1.5.2 第2节细胞的能量“货币”诶替屁.txt  1.5.3 第3节细胞呼吸的原理和应用.txt  1.5.4 第4节光合作用与能量转化.txt  1.6.1 第1节细胞的增殖.txt  1.6.2 第2节细胞的分化.txt  1.6.3 第3节细胞的衰老和死亡.txt  科学家访谈 和第1章走近细胞.txt  第2章 组成细胞的分子.txt  第3章 细胞的基本结构.txt  第4章 细胞的物质输入和输出.txt  第5章 细胞的能量供应和利用.txt  第6章 细胞的生命历程.txt
生物课本/高中生物必修2/: 2.0科学家访谈.txt  2.1.1 第 1 章 遗传因子的发现.txt  2.1.2 第 2 节 孟德尔的豌豆杂交实验（二）.txt  2.2.1 第1节减数分裂和受精作用.txt  2.2.2 第2节基因在染色体上.txt  2.2.3 第3节 伴性遗传.txt  2.3.1 第1节 地恩诶是主要的遗传物质.txt  2.3.2 第2节 地恩诶的结构.txt  2.3.3 第3节 地恩诶的复制.txt  2.3.4 第4节 基因通常是有遗传效应的地恩诶片段.txt  2.4.1 第1节 基因指导蛋白质的合成.txt  2.4.2 第2节 基因表达与性状的关系.txt  2.5.1 第1节 基因突变和基因重组.txt  2.5.2 第2节 染色体变异.txt  2.5.3 第3节 人类遗传病.txt  2.6.1 第1节生物有共同祖先的证据.txt  2.6.2 第2节自然选择与适应的形成.txt  2.6.3 第3节种群基因组成的变化与物种的形成.txt  2.6.4 第4节协同进化与生物多样性的形成.txt  科学家访谈.txt  第 1 章 遗传因子的发现.txt  第 2 章 基因和染色体的关系 豆包.txt  第 2 章 基因和染色体的关系.txt  第2章基因和染色体的关系 DS.txt  第6章 生物的进化.txt
生物课本/高中生物选修1/: 3.0 科学家访谈.txt  3.1.1 第1节 细胞生活的环境.txt  3.1.2 第2节 内环境的稳态.txt  3.2.1 第1节 神经调节的结构基础.txt  3.2.2 第2节 神经调节的基本方式.txt  第2章 神经调节.txt  (+18 more)
(+12 files in other folders)
